starting over javascript

--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
           <section>
             
             <div class="card guess">
-              <div class="large-font choice-buttons">Pick One</div>
-              <button class="Choice A">A</button>
-              <button class="Choice B">B</button>
-              <button class="Choice C">C</button>
-              <button clas="Choice D">D</button>
-
+              <div class="large-font choice-buttons"></div>
             </div>
           </section>
     
