added containers to render when start button is pressed

--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
 
             </div>
 
+            <div id= "finish-container" class = "hide">
+              <div class = "container finish">
+                <div id = score-banner>
+                  <h1> Finished! </h1>
+                </div>
+                <form id="initials-form" class = "initials">
+                  <p>Enter Your Initials:
+                    <input type = "text" name = "initials" id = "initials" class = "text-input" /> 
+                    <button class = "btn startend" id = "submit-score" type = "submit"> Submit </button>
+                  </p>
+                </form>
+              </div>
+
+            </div>
+
           </section>
     
           <section>
