--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
               <div class = "first container">
                 <h1> Welcome to the Coding Quiz </h1>
                 <p> Choose the correct answer within the time limit and score big. Be sure to choose wisely as the wrong choice penalizes you.</p>
+                <button class="start-button">Start</button>
+
               </div>
 
             </div>
