--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
               <div class= "card timer">
                 <div class = "timer-text">
-                <div class="large-font timer-count"><span id="timer"></span></div>
+                <div class="large-font timer-count">0</div>
                 <h3>seconds remaining</h3>
               </div>
             
