questions show up now

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1> Welcome to the Coding Quiz </h1>
           <p> Choose the correct answer within the time limit and score big. Be sure to choose wisely as the wrong
             choice penalizes you.</p>
-          <button class="start-button">Start</button>
+          <button class="btn startend" id= "start-game">Start</button>
         </div>
       </div>
 
